--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f848cb89cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9a10891d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f848bcd1dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f848bcd1fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a0a3ce10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9a0a3cfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f848c275690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f848c275890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a0fe2750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9a0fe2950&gt;]</pre>
 </div>
 
 </div>
