--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f271526b450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc444493dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2715694c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2715694e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4435c5c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc4435c5e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2715c384d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2715c386d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc443b685d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc443b687d0&gt;]</pre>
 </div>
 
 </div>
