--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53ace37e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ea8f031d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53ad276f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53ad25bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ea94dacd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ea94daed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53ad804490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53ad804690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ea9a835d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ea9a837d0&gt;]</pre>
 </div>
 
 </div>
