--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ad7dbf090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a4db6d3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ad7ae4d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ad7ae4f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a4d7dcb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a4d7dcd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ad808a690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ad808a890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a4dd83510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a4dd83710&gt;]</pre>
 </div>
 
 </div>
