--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faaca0e4910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe8765a4810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faac9d9d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faac9dedc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe875a9ac90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8757afe10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faaca33b210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faaca356810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe875da14d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe875d54790&gt;]</pre>
 </div>
 
 </div>
