--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90710eb290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f629dbca2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9070219d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9070219f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f629cc2fc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f629cc2fe90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f90707c1710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f90707c1910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f629d1d9610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f629d1d9810&gt;]</pre>
 </div>
 
 </div>
