--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0bc2229dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93e5ab8110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bc1ef6bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0bc1ef6dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93e4ca7dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93e4ca7fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bc249c490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0bc249c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93e5256750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93e5256950&gt;]</pre>
 </div>
 
 </div>
