--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a85e8bad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f86c03f4ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a85075790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a85075b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86c00aac50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86c00aae50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a8561f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a8562a750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86c0651590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86c0651790&gt;]</pre>
 </div>
 
 </div>
