--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44b7928dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0032a5bc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44b75f7b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44b75f7d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0032e7fc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0032e7fe10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44b7b99490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44b7b99690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0033428550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0033428750&gt;]</pre>
 </div>
 
 </div>
