--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92c26ebf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47affc90d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92c2047850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92c2072ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47af94fbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47af94fdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92c2611150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92c261c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47afef84d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47afef86d0&gt;]</pre>
 </div>
 
 </div>
