--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06ee3ff550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb608b72b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06ee441c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06ee441e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb608f9acd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb608f9aed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06ee9e9590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06ee9e9790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb60953f610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb60953f810&gt;]</pre>
 </div>
 
 </div>
