--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b0627af90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f4418c050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b0669dcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b0669ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f43b03c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f43b03e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b06c456d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b06c458d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f440b35d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f440b37d0&gt;]</pre>
 </div>
 
 </div>
