--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4602741690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f10d957a690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46023a6cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46023a6ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10d875ea90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f10d875ec90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f460294a5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f460294a7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10d8d05450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f10d8d05650&gt;]</pre>
 </div>
 
 </div>
