--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad75b9f750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe2530b7550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad75b59b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad76153210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe24d24b710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe24d27ae10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad76122450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad7612bb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe24d81d090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe24d828790&gt;]</pre>
 </div>
 
 </div>
