--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73c74e0450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76b65fc450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73c7227cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73c7227ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b5f71c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76b5f71e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73c77cc650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73c77cc850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b6522550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76b6522750&gt;]</pre>
 </div>
 
 </div>
