--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e2762dd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f646b3d8510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e26fe6b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e26fe6d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f646ad58c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f646ad58e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e2758a4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e2758a6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f646b305650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f646b305850&gt;]</pre>
 </div>
 
 </div>
