--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb384ea4750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc087286810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb384b179d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb384b17bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc086c51c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc086c51e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3850ba390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3850ba590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0871f6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0871f6790&gt;]</pre>
 </div>
 
 </div>
